Adding Brazillian Portuguese support
I tried to keep terms like "arbitration", "sorties",  "Sentient", "Acolytes", "Riven" in english because there is no actual translation for some or they might cause confusion if translated to portuguese. It's not a word by word translation (like Google Translate), but a handmade contextual translation to keep it friendly and understandable, without losing any meaning.

--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,127 +1,127 @@
 {
     "help_title": "Help hub",
-    "help_description": "[Vote here](https://top.gg/bot/593364281572196353) to support my work if you ❤️ the bot\n`[RequiredArgument] <Parameter | To | Choose>`\n[Source code and commands](https://takitsu21.github.io/WarframeTrader/)",
-    "help_waframe_market_description": "Views commands about warframe.market(WTS, WTB, stats).",
-    "help_worldstate_description": "Views commands about worldstate data (arbitration, fissures etc...)",
+    "help_description": "[Vote aqui](https://top.gg/bot/593364281572196353) para contribuir ao meu trabalho se você ❤️ do bot\n`[ArgumentoObrigatorio] <Parametro | a | escolher>`\n[Código fonte e comandos](https://takitsu21.github.io/WarframeTrader/)",
+    "help_waframe_market_description": "Veja os comandos do warframe.market(WTS, WTB, stats).",
+    "help_worldstate_description": "Veja os comandos sobre dados do estado atual do mundo (arbitration, fissures etc...)",
     "help_bot_utility_name": "Warframe Trader utility",
-    "help_bot_utility_value": "Views commands about the bot",
-    "help_wtb": "Views 7 sellers sort by prices and status (Online in game)",
-    "help_wts": "Views 7 buyers sort by prices and status (Online in game)",
-    "help_riven": "Views 6 riven mod sorted by ascending prices and status (Online in game)",
-    "help_ducats": "Views 18 worth it items to sell in ducats",
-    "help_fissures": "Views current fissures available, you can add filter, for exemple **`*f pc requiem axi survival`** the filter arguments will show only requiem, axi and survival missions (infinite filter accepted separated with space)",
-    "help_sortie":  "Views current sortie",
-    "help_baro": "Views baro ki'teer inventory and dates",
-    "help_news": "Views news about Warframe",
-    "help_earth": "Views earth cycle",
-    "help_wiki": "Views wiki url according to the query",
-    "help_event": "Views current events",
-    "help_sentient": "Views if Sentient ship is active or not",
-    "help_fish": "Views fishing map based on location that you choosed",
-    "help_bug": "Send me a bug report, this will helps to improve the bot",
-    "help_suggestion": "Suggestion to add for the bot, all suggestions are good don't hesitate",
-    "help_ping": "Views bot latency",
-    "help_about": "Bot info",
-    "help_donate": "Link to support me",
-    "help_vote": "An other way to support me",
-    "help_support": "Discord support if you need help or want to discuss with me",
-    "help_invite": "Views bot link invite",
-    "help_language": "Languages supported for now (**fr**, **en**). Languages not supported but you can contribute (de, es, it, ja, ko, pl, pt, ru, tc, tr) [Here](https://github.com/takitsu21/WarframeTrader/tree/master/locales) by doing pull requests.",
-    "help_set_prefix": "Set new prefix, Only admins",
-    "help_get_prefix": "Views actual guild prefix",
-    "help_settings_delete": "Change message settings, Only admins",
-    "help_settings_delay": "Change message delay setting, Only admins",
-    "help_help": "Views bot commands, you can provide argument `all` if you want all the commands in one",
-    "help_error": "Available commands",
+    "help_bot_utility_value": "Exibe os comandos do bot",
+    "help_wtb": "Mostra 7 vendedores ordenados por preço e status (Online no jogo)",
+    "help_wts": "Mostra 7 compradores ordenados por preço e status (Online no jogo)",
+    "help_riven": "Mostra 6 riven mods ordenados por preço crescente e status (Online no jogo)",
+    "help_ducats": "Mostra os 18 melhores items para vender por ducats",
+    "help_fissures": "Mostra as fissuras disponíveis atualmente, você pode filtrar, por exemplo **`f pc requiem axi survival`** para mostrar apenas missoes de survival para axi ou requiem (aceita-se infinitos filtros, separados por espaço)",
+    "help_sortie":  "Mostra a sortie atual",
+    "help_baro": "Mostra o inventário do Baro Ki'Teer e suas datas",
+    "help_news": "Mostra notícias sobre Warframe",
+    "help_earth": "Mostra o ciclo (dia ou noite) na Terra (Earth)",
+    "help_wiki": "Mostra a página da Wiki de acordo com a consulta",
+    "help_event": "Mostra os eventos atuais",
+    "help_sentient": "Verifica se o a nave Sentient está ativa ou não",
+    "help_fish": "Verifica o mapa de pesca de acordo com a localização que você escolheu",
+    "help_bug": "Me envia um relatório de bug, isso ajudará a melhorar o bot",
+    "help_suggestion": "Sugestão para aprimora o bot, toda sugestão é boa, não hesite em enviar",
+    "help_ping": "Mostra a latência do bot",
+    "help_about": "Informação sobre o bot",
+    "help_donate": "Link para contribuir",
+    "help_vote": "Outra maneira de me ajudar",
+    "help_support": "Discord de suporte se você precisar de ajuda ou gostaria de discutir comigo",
+    "help_invite": "Mostra o link de convite do bot",
+    "help_language": "Idiomas suportados por ora (**fr**, **en**, **pt**). Idiomas não suportados mas que você pode contribuir (de, es, it, ja, ko, pl, ru, tc, tr) [aqui](https://github.com/takitsu21/WarframeTrader/tree/master/locales) fazendo pull requests.",
+    "help_set_prefix": "Configura um novo prefixo, Só para admins",
+    "help_get_prefix": "Mostra o prefixo atual deste servidor",
+    "help_settings_delete": "Alterar configurações de mensagem, Só para admins",
+    "help_settings_delay": "Alterar o intervalo entre mensagens, Só para admins",
+    "help_help": "Mostra os comandos do bot, você pode usar o argumento `all` se você quiser ver todos os comandos de uma vez",
+    "help_error": "Comandos disponíveis",
 
-    "command_vote_title": "Vote for Warframe Trader",
-    "command_about_title": "Help command",
-    "command_about_contributor": "Contributor list",
-    "command_settings_delete_title": "Delete messages",
-    "command_settings_delay": "Delay",
-    "command_settings_check_description": "Here is your guild settings ({0})",
-    "command_settings_check_description_updated": "Your guild settings ({0}) has been updated",
-    "command_settings_update": "Settings Updated",
-    "command_set_prefix": "New prefix : `{0}`",
-    "command_get_prefix_title": "Prefix",
-    "command_suggestion_title": "Suggestion",
-    "command_suggestion_sent": "{0} Your suggestion has been sent @Taki#0853\nThanks for the feedback!",
-    "command_bug_title": "Bug report",
-    "command_bug_sent": "{0} Your bug report has been sent @Taki#0853\nThanks for the feedback!",
-    "command_language_title": "Language Settings",
-    "command_language_description": "Your previous guild language was {0} ({1}) has been successfully setted up as {2}",
-    "command_language_description_no_lang": "Your actual guild language is {0} ({1})",
-    "command_language_description_error": "{0} is not in the languages list. Languages supported for now (**fr**, **en**). Languages not supported but you can contribute (de, es, it, ja, ko, pl, pt, ru, tc, tr) [Here](https://github.com/takitsu21/WarframeTrader/tree/master/locales) by doing pull requests.",
-    "command_ping_title": "Warframe Trader ping",
-    "command_help_invalide_arg": "{0} You provided an invalide argument, try with `{1}help all`",
+    "command_vote_title": "Vote no Warframe Trader",
+    "command_about_title": "Comando de ajuda",
+    "command_about_contributor": "Lista de contribuidores",
+    "command_settings_delete_title": "Apaga as mensagens",
+    "command_settings_delay": "Intervalo",
+    "command_settings_check_description": "Aqui estão as configurações de seu servidor ({0})",
+    "command_settings_check_description_updated": "As configurações do servidor ({0}) foram atualizadas",
+    "command_settings_update": "Configurações atualizadas",
+    "command_set_prefix": "Novo prefixo: `{0}`",
+    "command_get_prefix_title": "Prefixo",
+    "command_suggestion_title": "Sugestão",
+    "command_suggestion_sent": "{0} Sua sugestão foi enviada @Taki#0853\nObrigado pelo feedback!",
+    "command_bug_title": "Relatório de bugs",
+    "command_bug_sent": "{0} Seu relatório de bugs foi enviado @Taki#0853\nObrigado pelo feedback!",
+    "command_language_title": "Configurações de Idioma",
+    "command_language_description": "O idioma do seu servidor era {0} ({1}) foi configurada como {2} com sucesso",
+    "command_language_description_no_lang": "O idioma atual do seu servidor é {0} ({1})",
+    "command_language_description_error": "{0} não está na lista de idiomas. Idiomas suportados por ora (**fr**, **en**, **pt**). Idiomas não suportados mas que você pode contribuir (de, es, it, ja, ko, pl, ru, tc, tr) [Aqui](https://github.com/takitsu21/WarframeTrader/tree/master/locales) fazendo pull requests.",
+    "command_ping_title": "Ping do Warframe Trader",
+    "command_help_invalide_arg": "{0} Você usou um argumento inválido, tente com `{1}help all`",
 
-    "command_stat_msg_title": "{0} Your {1} graph below",
+    "command_stat_msg_title": "{0} Seu gráfico do {1} abaixo",
 
-    "command_wtb_title": "💰WTB {0}💰\n<:_purple_circle:643936797222764554> Online in game - Sort by prices",
-    "command_wtb_description": "View grapghical stats",
-    "command_wtb_field_name_offer": "{0}. **{1}** | +**{2}**🙂 for **{3}** <:pl:632332600538824724> x **{4}** pieces",
-    "command_wtb_field_name_no_offer": "0 offer for {0}",
-    "command_wtb_field_value_no_offer": "No one is actually online in game or selling this item sorry!\nComeback later tenno!",
-    "command_wts_title": "💰WTS {0}💰\n<:_purple_circle:643936797222764554> Online in game - Sort by prices",
-    "command_wts_description": "View grapghical stats",
-    "command_wts_field_name_offer": "{0}. **{1}** | +**{2}**🙂 for **{3}** <:pl:632332600538824724> x **{4}** pieces",
-    "command_riven_status_description": "<:_green_circle:643936852327530548> Online | Online in game <:_purple_circle:643936797222764554>",
-    "command_riven_author_name": "Riven auctions for {0}",
-    "command_riven_field_value_item_description": "Buyout price {0} | Starting price {1} | Top bid {2}\nPolarity {3} | MR {4}\nRe-rolls {5} | Mod rank {6}\n[View Riven](https://warframe.market/auction/{7})\n|| `/w {8} Hi!` ||",
-    "command_riven_field_name_attributes": "Attributes",
-    "command_riven_description_no_offer": "There is actually no offer sorry! Come back later Tenno!",
+    "command_wtb_title": "💰WTB {0}💰\n<:_purple_circle:643936797222764554> Online no jogo - Ordenado por preço",
+    "command_wtb_description": "Mostrar status gráficos",
+    "command_wtb_field_name_offer": "{0}. **{1}** | +**{2}**🙂 por **{3}** <:pl:632332600538824724> x **{4}** unidades",
+    "command_wtb_field_name_no_offer": "0 ofertas para {0}",
+    "command_wtb_field_value_no_offer": "Desculpe, ninguém está atualmente online no jogo ou vendendo esse item.\nTente novamente mais tarde, Tenno!",
+    "command_wts_title": "💰WTS {0}💰\n<:_purple_circle:643936797222764554> Online no jogo - Ordenado por preço",
+    "command_wts_description": "Mostrar status gráficos",
+    "command_wts_field_name_offer": "{0}. **{1}** | +**{2}**🙂 por **{3}** <:pl:632332600538824724> x **{4}** unidades",
+    "command_riven_status_description": "<:_green_circle:643936852327530548> Online | Online no jogo <:_purple_circle:643936797222764554>",
+    "command_riven_author_name": "Leilões de Riven para {0}",
+    "command_riven_field_value_item_description": "Preço de aquisição {0} | Preço inicial {1} | Oferta mais alta {2}\nPolarity {3} | MR {4}\nRe-rolls {5} | Rank do mod {6}\n[Ver Riven](https://warframe.market/auction/{7})\n|| `/w {8} Hi!` ||",
+    "command_riven_field_name_attributes": "Atributos",
+    "command_riven_description_no_offer": "Desculpe, não há nenhuma oferta no momento. Tente novamente mais tarde, Tenno!",
 
-    "command_fissures_author_name": "[{0}] - Fissures",
-    "command_sortie_description": "Faction : **{0}**\nTime left **{1}**\n In-progress : **{2}**",
-    "command_sortie_author_name": "Sortie",
+    "command_fissures_author_name": "[{0}] - Fissuras",
+    "command_sortie_description": "Facção : **{0}**\nTempo restante **{1}**\n Em progresso : **{2}**",
+    "command_sortie_author_name": "Sortie (Missões Diárias)",
     "command_arbitration_title": "Arbitration",
-    "command_baro_description_start": "Baro is coming in **{0}**",
+    "command_baro_description_start": "Baro irá chegar em **{0}**",
     "command_baro_author_name": "Baro Ki'Teer",
-    "command_baro_description_end": "Baro will left {0} in **{1}**",
-    "command_baro_field_name_location": "Location",
-    "command_baro_field_value_location": "{0} will be at {1}",
-    "command_news_title": "Warframe News [{0}]",
-    "command_earth_to_night": " to night 🌙",
-    "command_earth_to_day": " to day ☀️",
-    "command_earth_author_name": "Earth Cycle",
-    "command_earth_field_name_state": "State",
-    "command_event_title": "Current Events",
-    "command_event_description_no_event": "There is no events for now\nCome back later tenno!",
-    "command_nightwave_description" : "This season expire in {0}\nWeek challenges expire in {1}",
-    "command_nightwave_author_name_actual_season": "Nightwave season {0}",
-    "command_nightwave_no_nightwave": "{0} There is no Nightwave operation for now!",
-    "command_sentient_title_active": "Sentient ship active",
-    "command_sentient_description_active": "Sentient ship on {0}",
-    "command_sentient_field_name_note": "NOTE",
-    "command_sentient_field_value_note": "When the sentient ship appear you will see the planet concerned on the bot activity beside cetus and fortuna cycle's datas",
-    "command_sentient_title_inactive": "Sentient ship inactive",
-    "command_sentient_description_inactive": "Last update {0} GMT +0000",
-    "command_fish_title_fortuna": "Fortuna fishing map",
-    "command_fish_title_cetus": "Cetus fishing map",
-    "command_fish_provide_valid_map": "{0} Please provide a valid map location like `fortuna` or `cetus`",
+    "command_baro_description_end": "Baro irá embora {0} em **{1}**",
+    "command_baro_field_name_location": "Local",
+    "command_baro_field_value_location": "{0} estará em {1}",
+    "command_news_title": "Notícias do Warframe [{0}]",
+    "command_earth_to_night": " para anoitecer 🌙",
+    "command_earth_to_day": " para amanhecer ☀️",
+    "command_earth_author_name": "Ciclo na Terra (Earth)",
+    "command_earth_field_name_state": "Estado",
+    "command_event_title": "Eventos atuais",
+    "command_event_description_no_event": "Não há eventos por ora.\nVolte mais tarde, Tenno!",
+    "command_nightwave_description" : "Essa temporada terminará em {0}\nOs desafios semanais irão expirar em {1}",
+    "command_nightwave_author_name_actual_season": "Temporada {0} do Nightwave",
+    "command_nightwave_no_nightwave": "{0} Não há nenhuma operação do Nighwave por ora",
+    "command_sentient_title_active": "Nave Sentient ativa",
+    "command_sentient_description_active": "Nave Sentient está em {0}",
+    "command_sentient_field_name_note": "OBSERVAÇÃO",
+    "command_sentient_field_value_note": "Quando a nave Sentient aparecer você verá o planeta relacionado junto aos ciclos de Cetus e Fortuna nos dados de atividade fornecidos pelo bot",
+    "command_sentient_title_inactive": "Nave Sentient inativa",
+    "command_sentient_description_inactive": "Última atualização {0} GMT +0000",
+    "command_fish_title_fortuna": "Mapa de pesca de Fortuna",
+    "command_fish_title_cetus": "Mapa de pesca de Cetus",
+    "command_fish_provide_valid_map": "{0} Por favor, forneça uma localização válida como `fortuna` ou `cetus`",
     "command_acolytes_author_title": "Acolytes [{0}]",
-    "command_acolytes_title_not_available": "Acolytes are not available for now",
+    "command_acolytes_title_not_available": "Acolytes não estão disponíveis por ora",
     "command_acolytes_field_name": "{0} rank {1}",
-    "command_acolytes_field_value_discovered": "Discovered on {0}\nHealth left : {1:.2f}%",
-    "command_acolytes_field_value_not_discovered": "Not discovered\nHealth left : {0:.2f}%",
+    "command_acolytes_field_value_discovered": "Descoberto em {0}\nVida restante : {1:.2f}%",
+    "command_acolytes_field_value_not_discovered": "Não descoberto\nVida restante : {0:.2f}%",
 
-    "yes": "yes",
-    "no": "no",
-    "error": "❌Error❌",
-    "reputation": "reputation",
-    "credits": "credits",
-    "wrong_item_name": "You might have spelled a wrong item name 🤔 or the API is basically down, try later tenno!",
-    "message_too_short": "{0} Message too short!\nAt least 3 words required",
-    "provide_platform": "{0} Please provide a platform `<pc | ps4 | xb1 | swi>`",
-    "wrong_platform": "{0} Platform invalid!\nRetry with `{1}{2} <pc | ps4 | xb1 | swi>`",
-    "servers": "Servers",
-    "members": "Members",
-    "creator": "**Creator**",
-    "time_left": "time left",
-    "discord_support_title": "Discord support",
-    "click_here": "Click here",
-    "invite_bot": "Invite Warframe Trader",
-    "kofi": "Buy me a kofi",
+    "yes": "sim",
+    "no": "não",
+    "error": "❌Erro❌",
+    "reputation": "reputação",
+    "credits": "créditos",
+    "wrong_item_name": "Você pode ter errado o nome do item 🤔 ou a API pode ter caído. Tente mais tarde, Tenno!",
+    "message_too_short": "{0} Mensagem muito curta!\nPelo menos 3 palavras são necessárias!",
+    "provide_platform": "{0} Por favor, escolha uma plataforma `<pc | ps4 | xb1 | swi>`",
+    "wrong_platform": "{0} Plataforma inválida!\nTente novamente com `{1}{2} <pc | ps4 | xb1 | swi>`",
+    "servers": "Servidores",
+    "members": "Membros",
+    "creator": "**Criador**",
+    "time_left": "tempo restante",
+    "discord_support_title": "Discord do suporte",
+    "click_here": "Clique aqui",
+    "invite_bot": "Convide o Warframe Trader",
+    "kofi": "Me pague um kofi",
     "igname": "IGName",
-    "donate": "Donate"
+    "donate": "Faça uma doação"
 }
